--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <div class="imgBox">
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
-                      <div class="swiper-slide"><img src="/img/naranja.png" alt=""></div>
-                      <div class="swiper-slide"><img src="/img/sandia.png" alt=""></div>
-                      <div class="swiper-slide"><img src="/img/mango.png" alt=""></div>
-                      <div class="swiper-slide"><img src="/img/crema.png" alt=""></div>
+                      <div class="swiper-slide"><img src="img/naranja.png" alt=""></div>
+                      <div class="swiper-slide"><img src="img/sandia.png" alt=""></div>
+                      <div class="swiper-slide"><img src="img/mango.png" alt=""></div>
+                      <div class="swiper-slide"><img src="img/crema.png" alt=""></div>
 
                     </div>
                   </div>
