--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>AguaFreska</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+    <link rel="icon" href="./img/logo.ico">
   </head>
 <body>
     <section>
